@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.5.1) unstable; urgency=low
   * processor: fixed base=child assertion failure
   * handler: close request body if it was not consumed
   * static-file: generate Last-Modified and ETag response headers
+  * static-file: obey the Content-Type provided by the translation server
 
  --
 
